Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7619

USE_LU_REF/lu_ref feature broken after some REFASSERT()s have been added without lu_ref::lf_guard protection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • None
    • 3
    • 9223372036854775807

      Some quite old patches have introduced several REFASSERT()s, to strengthen lu_ref feature controls, but not under required lu_ref::lf_guard spin-lock protection.
      This can cause unexpected "self" dead-lock situations (vs LBUG/ASSERT!!) upon lu_ref failure detection.
      This has been unveiled during my own usage of the feature to track and debug some unreferencing bug/lack.

            bfaccini Bruno Faccini (Inactive)
            bfaccini Bruno Faccini (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: