LU-7619 obdclass: protect REFASSERT() with lu_ref::lf_guard

Some REFASSERT()s have been added by previous changes, but not
under required lu_ref::lf_guard spin-lock protection.
This can cause unexpected "self" dead-lock situations (vs
LBUG/ASSERT!!) upon lu_ref failure detection.

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: If23d43f6fca196a33602b6bb8f051c0a4e26a300
Reviewed-on: http://review.whamcloud.com/17756
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>